Update package to new-react-lib standards

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-0",
-    "react"
+  "presets": ["@babel/env", "@babel/typescript", "@babel/react"],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ]
 }
