--- a/example/package.json
+++ b/example/package.json
@@ -1,14 +1,18 @@
 {
   "name": "seasoned-components-example",
-  "homepage": "https://gustavoguichard.github.io/seasoned-components",
+  "homepage": "https://SeasonedSoftware.github.io/seasoned-components",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
+    "@reach/router": "latest",
+    "prop-types": "latest",
+    "react": "link:../node_modules/react",
+    "react-dom": "link:../node_modules/react-dom",
+    "react-scripts": "latest",
+    "react-syntax-highlighter": "^10.3.0",
     "seasoned-components": "link:.."
   },
   "scripts": {
@@ -16,5 +20,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
